<package>
  <name>euslisp</name>
  <version>9.23.0</version>
  <description>EusLisp is an integrated programming system for the
  research on intelligent robots based on Common Lisp and
  Object-Oriented programming</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://euslisp.github.io/EusLisp/manual.html</url>
  <url type="bugtracker">https://github.com/euslisp/EusLisp/issues</url>

  <author>Toshihiro Matsui</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>opengl</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libx11-dev</build_depend>
  <build_depend>libxext</build_depend>
  <build_depend>libpng12-dev</build_depend>
  <build_depend>libpq-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>xfonts-100dpi</build_depend>
  <build_depend>xfonts-75dpi</build_depend>

  <run_depend>opengl</run_depend>
  <run_depend>libjpeg</run_depend>
  <run_depend>libx11-dev</run_depend>
  <run_depend>libxext</run_depend>
  <run_depend>libpng12-dev</run_depend>
  <run_depend>libpq-dev</run_depend>
  <run_depend>xfonts-100dpi</run_depend>
  <run_depend>xfonts-75dpi</run_depend>

  <export>
    <cpp cflags="-I${prefix}/eus/include"/>
    <build_type>cmake</build_type>
  </export>
</package>
